:bug: Should fix images being cut off

--- a/app/src/styles/tiny.scss
+++ b/app/src/styles/tiny.scss
@@ -42,6 +42,10 @@ article {
 		// clamp the width of the article on desktop
 		width: clamp(300px, 45vw, 900px);
 	}
+
+	img {
+		width: 100%;	
+	}
 }
 
 // ##──── Nav ───────────────────────────────────────────────────────────────────────────────
